tests/baselines/reference/continueInIterationStatement4.errors.txt
==== tests/cases/compiler/continueInIterationStatement4.ts (1 errors) ====
    for (var i in something) {
                  ~~~~~~~~~
!!! continueInIterationStatement4.ts(1,15): error TS2095: Could not find symbol 'something'.
      continue;
    }